fixed words overflowing on the x axis and pushing everything to the right

--- a/frontend/src/components/Task/Task.module.css
+++ b/frontend/src/components/Task/Task.module.css
@@ -33,6 +33,8 @@
 
 .todo {
   cursor: pointer;
+  display: flex;
+  word-break: break-word;
 }
 
 .todo:hover {
